# bidirectional-api-converter

./: .gitignore  DEMO.md  README.md  demo.sh  package-lock.json  package.json  start.sh  test.sh
.husky/: pre-commit
backend/: .pre-commit-config.yaml  __init__.py  main.py  pyproject.toml
backend/converters/: __init__.py  gql_to_rest.py  rest_to_gql.py
backend/src/: main.py
backend/src/config/: settings.py
backend/src/controllers/: conversion_controller.py
backend/src/models/: __init__.py
backend/src/services/: gql_to_rest_service.py  rest_to_gql_service.py
examples/: sample-openapi.json  sample-schema.graphql
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx
